# sc-emb-search-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
script/: adata_info.py  data_to_db.py  del_missing_data.py  mysql_to_pgsql.py  reserve_missing_data.py
src/: router.ts
src/main/: apiserver.py
src/main/app/: server.py
src/main/app/common/: result.py
src/main/app/common/cell_emb_search/: cell_search_model.py
src/main/app/common/config/: config.py  config_manager.py
src/main/app/common/enums/: enum.py
src/main/app/common/exception/: exception.py
src/main/app/common/schema/: response_schema.py
src/main/app/common/session/: db_engine.py
src/main/app/common/util/: excel_util.py  field_type_mapping_util.py  security_util.py  sql_util.py  string_util.py  time_util.py  tree_util.py  validate_util.py
src/main/app/controller/: file_controller.py  job_controller.py  job_result_controller.py  probe_controller.py  sample_controller.py
src/main/app/mapper/: file_mapper.py  job_mapper.py  job_result_mapper.py  mapper_base_impl.py  metadata_mapper.py  sample_mapper.py
src/main/app/model/: file_model.py  job_model.py  job_result_model.py  metadata_model.py  migrate.py  sample_model.py
src/main/app/router/: router.py
src/main/app/schema/: common_schema.py  file_schema.py  job_result_schema.py  job_schema.py  metadata_schema.py  sample_schema.py
src/main/app/service/: file_service.py  job_result_service.py  job_service.py  metadata_service.py  sample_service.py  service_base.py
src/main/app/service/geneformer/: cell_embedding.py  classifier.py  emb_extractor.py  evaluation_utils.py  gene_name_id_dict.pkl  in_silico_perturber.py  perturber_utils.py
src/main/resource/: config-dev.yml  config-prod.yml  config.yml
src/main/resource/alembic/: script.py.mako
src/tests/: main.py
(+10 files in other folders)
