[project]
name = "sc-emb-search-server"
version = "0.1.0"
description = "Cross-species Single-cell Embedding Retrieval Database"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.3",
    "aiosqlite>=0.20.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "loguru>=0.7.2",
    "aiomysql>=0.2.0",
    "pandas>=2.2.3",
    "xlsxwriter>=3.2.0",
    "openpyxl>=3.1.5",
    "greenlet>=3.1.1",
    "cryptography>=44.0.2",
    "scimilarity>=0.3.0",
    "numpy<2",
    "anndata>=0.9",
    "datasets>=2.12",
    "hyperopt>=0.2",
    "loompy>=3.0",
    "matplotlib>=3.7",
    "optuna>=3.6",
    "optuna-integration>=3.6",
    "packaging>=23.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.2",
    "tdigest>=0.5.2",
    "tensorboard>=2.15",
    "tqdm>=4.65",
    "transformers>=4.40",
    "asyncpg>=0.30.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
include = ["src/**/*.py"]
exclude = ["doc/**/*.py"]
line-length = 120
